OIDC device-flow review follow-ups
Follow-ups from the device-flow review:

- README: the OIDC quick-start still called the pre-rename API (getToken()
  as the interactive sign-in, auth::getTokenSilently). Use signIn() for the
  one-time sign-in and auth::getToken for the token provider, matching the
  renamed methods.

- OidcDeviceAuth: pre-encode the invariant form params (client_id, scope,
  audience) once in the constructor and the device_code once in pollForToken,
  instead of re-running URLEncoder on every poll (~once/5s through a sign-in)
  and every silent refresh. Mirrors the existing GRANT_TYPE_*_ENCODED
  constants; the wire output is unchanged. Add appendEncodedParam for the
  pre-encoded values and keep appendParam for the dynamic refresh_token.

- Reorder getToken() before signIn() and rename the lagging
  testGetTokenSilently* / testConcurrentGetToken* methods to match the
  renamed API.

- QwpQueryClientTokenProviderTest: cover the real connect path, not just the
  test hook - a throwing provider fails the connection attempt, the pulled
  token reaches the actual upgrade Authorization header, and a null, empty or
  blank provider return is rejected.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>